refactor: rename all Mantle references to HashKey, update README

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mantle RWA Truthflow | The Arena</title>
+    <title>HashKey RWA Truthflow | The Arena</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
         theme: {
           extend: {
             colors: {
-              mantle: {
+              hsk: {
                 black: '#0a0a0a',
                 dark: '#111111',
-                accent: '#65b3ad', // Mantle teal-ish
+                accent: '#65b3ad', // HashKey teal
                 neon: '#00ffcc',
                 danger: '#ff0055',
               },
